add Readme + fix padding next chapter

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -293,7 +293,7 @@
   }
 
   #nextchapter {
-    padding: 8rem 0;
+    padding: 15rem 0; //add space around the keep scrolling for next chapter
 
     .nextchapter {
 
