--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -5,7 +5,7 @@ html(lang="en")
     block SEO
     //- block styles
   body
-    include ./component/navigation
+    //- include ./component/navigation
     include ./component/app
     block App
     block scripts
