--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -109,21 +109,21 @@
   z-index: 1;
   top: 0;
   left: 0;
-  margin-top: 10vh;
+  margin-top: 0;
   margin-bottom: 0;
   width: 100%;
   height: 100%;
 
   .slider-master {
     width: 100%;
-    height: 77vh;
-    border-radius: 15px;
+    height: 100vh;
+    border-radius: 0;
 
     .swiper {
       margin: 0 auto;
       width: 100%;
       height: 100%;
-      border-radius: 15px;
+      border-radius: 0;
     }
 
     .swiper-slide {
@@ -135,10 +135,10 @@
       height: 100%;
       overflow: hidden;
       position: relative;
-      border-radius: 15px;
+      border-radius: 0;
 
       .slide-overlay {
-        background: linear-gradient(0deg, #2F1A4C 4%, rgba(47, 26, 76, 0) 78.94%), linear-gradient(0deg, rgba(47, 26, 76, 0.5), rgba(47, 26, 76, 0.5));
+        background: linear-gradient(180deg, rgba(0, 0, 0, 0.8) 1.2%, rgba(0, 0, 0, 0) 29.89%);
         position: absolute;
         top: 0;
         left: 0;
@@ -151,12 +151,13 @@
         position: absolute;
         z-index: 2;
         left: 50%;
-        top: 30%;
+        bottom: 40%;
         width: 70%;
         text-align: center;
         transition: opacity 0.5s $ease-inout-expo, transform 0.5s $ease-inout-expo;
         transform: translateX(-50%) translateY(40px);
         opacity: 0;
+        text-transform: none !important;
         @include font-subheading2($size: $font-size-small);
 
         @include media('<=phone') {
@@ -179,7 +180,7 @@
 
         @include media('>=phone') {
           width: 70%;
-          bottom: 37%;
+          bottom: 20%;
           @include font-heading($size: 2.5rem);
         }
       }
@@ -189,6 +190,7 @@
         color: $color-primary;
         border-radius: 100px;
         padding: 0.8rem 1.8rem;
+        text-transform: none !important;
         white-space: nowrap;
         position: absolute;
         z-index: 2;
@@ -293,7 +295,7 @@
   }
 
   #nextchapter {
-    padding: 15rem 0; //add space around the keep scrolling for next chapter
+    padding: 20rem 0;//Add space around, keep scrolling for next chapter
 
     .nextchapter {
 
