--- a/src/views/pages/home.pug
+++ b/src/views/pages/home.pug
@@ -30,60 +30,49 @@ block App
               <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0 10C0 7.34784 1.05357 4.8043 2.92893 2.92893C4.8043 1.05357 7.34784 0 10 0C12.6522 0 15.1957 1.05357 17.0711 2.92893C18.9464 4.8043 20 7.34784 20 10C20 12.6522 18.9464 15.1957 17.0711 17.0711C15.1957 18.9464 12.6522 20 10 20C7.34784 20 4.8043 18.9464 2.92893 17.0711C1.05357 15.1957 0 12.6522 0 10ZM9.375 1.34625C8.5375 1.60125 7.70625 2.37125 7.01625 3.665C6.78892 4.09512 6.59339 4.54131 6.43125 5H9.375V1.34625ZM5.1125 5C5.32084 4.33602 5.58859 3.69217 5.9125 3.07625C6.12863 2.66757 6.37824 2.27749 6.65875 1.91C5.11 2.55228 3.77751 3.62453 2.81875 5H5.1125ZM4.385 9.375C4.4225 8.27875 4.5575 7.2275 4.775 6.25H2.0925C1.6264 7.23131 1.34827 8.29126 1.2725 9.375H4.385ZM6.05875 6.25C5.81289 7.27475 5.67134 8.32175 5.63625 9.375H9.375V6.25H6.05875ZM10.625 6.25V9.375H14.3625C14.3279 8.32179 14.1867 7.27479 13.9412 6.25H10.625ZM5.6375 10.625C5.67218 11.6782 5.81331 12.7252 6.05875 13.75H9.375V10.625H5.6375ZM10.625 10.625V13.75H13.9412C14.175 12.7937 14.3238 11.74 14.3638 10.625H10.625ZM6.43125 15C6.60375 15.4825 6.8 15.93 7.01625 16.335C7.70625 17.6287 8.53875 18.3975 9.375 18.6538V15H6.43125ZM6.65875 18.09C6.37822 17.7225 6.12861 17.3324 5.9125 16.9237C5.5886 16.3078 5.32085 15.664 5.1125 15H2.81875C3.77746 16.3755 5.10997 17.4478 6.65875 18.09ZM4.775 13.75C4.54896 12.7226 4.4184 11.6765 4.385 10.625H1.2725C1.35 11.7375 1.63625 12.7913 2.0925 13.75H4.775ZM13.3413 18.09C14.89 17.4478 16.2225 16.3755 17.1812 15H14.8875C14.6791 15.664 14.4114 16.3078 14.0875 16.9237C13.8714 17.3325 13.6218 17.7226 13.3413 18.09ZM10.625 15V18.6538C11.4625 18.3988 12.2937 17.6287 12.9838 16.335C13.2 15.93 13.3962 15.4825 13.5687 15H10.625ZM15.225 13.75H17.9075C18.3638 12.7913 18.65 11.7375 18.7275 10.625H15.615C15.5816 11.6765 15.4511 12.7226 15.225 13.75ZM18.7275 9.375C18.6517 8.29127 18.3736 7.23132 17.9075 6.25H15.225C15.4425 7.2275 15.5775 8.27875 15.615 9.375H18.7275ZM14.0875 3.07625C14.3963 3.65625 14.665 4.30125 14.8875 5H17.1812C16.2225 3.62448 14.89 2.55222 13.3413 1.91C13.6138 2.265 13.8638 2.6575 14.0875 3.07625ZM13.5687 5C13.4066 4.54131 13.2111 4.09511 12.9838 3.665C12.2937 2.37125 11.4625 1.6025 10.625 1.34625V5H13.5687Z" fill="#D8F1A3"/></svg>
               span.nav-item-text For The World
       section#intro
-        .container 
+        .container-full
           .slider-master
             .swiper.slider
               .swiper-wrapper
                 .swiper-slide
-                  h4.slide-subtitle AEMO - Australian Energy Market Operator
-                  h3.slide-title I'm helping to <span class="bold">decarbonize</span> the grid because my battery is being used to balance the grid-not a fossil-fuel powered plant.
-                  .slide-btn Scroll to see <svg width="9" height="11" viewBox="0 0 9 10" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4.58691 1.21997L4.58691 8.91924" stroke="#A566FF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/><path d="M1.0752 5.76978L4.58693 8.91948L8.09867 5.76978" stroke="#A566FF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/></svg>
+                  h4.slide-subtitle I’m Robert
+                  h3.slide-title I live in Potsdam, <br> near Berlin.
+                  //- .slide-btn Scroll to see <svg width="9" height="11" viewBox="0 0 9 10" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4.58691 1.21997L4.58691 8.91924" stroke="#A566FF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/><path d="M1.0752 5.76978L4.58693 8.91948L8.09867 5.76978" stroke="#A566FF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/></svg>
                   .slide-overlay
                   img(src="/individuals-desktop.jpg" alt="Individuals")
                 .swiper-slide
-                  h4.slide-subtitle AEMO - Australian Energy Market Operator
-                  h3.slide-title Behind the curtain.. David works for the <span class="bold">DNSP</span> (Distribution Network System Operator) and is really happy about EDGE
-                  .slide-btn Scroll to see <svg width="9" height="11" viewBox="0 0 9 10" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4.58691 1.21997L4.58691 8.91924" stroke="#A566FF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/><path d="M1.0752 5.76978L4.58693 8.91948L8.09867 5.76978" stroke="#A566FF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/></svg>
+                  h4.slide-subtitle Lucas works at SunnyCharge
+                  h3.slide-title Company offering the <br> green charging <br> contract to Robert.
                   .slide-overlay
                   img(src="/companies-desktop.jpg" alt="Companies")
                 .swiper-slide
-                  h4.slide-subtitle AEMO - Australian Energy Market Operator
-                  h3.slide-title Behind the curtain.. David works for the <span class="bold">DNSP</span> (Distribution Network System Operator) and is really happy about EDGE
-                  .slide-btn Scroll to see <svg width="9" height="11" viewBox="0 0 9 10" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4.58691 1.21997L4.58691 8.91924" stroke="#A566FF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/><path d="M1.0752 5.76978L4.58693 8.91948L8.09867 5.76978" stroke="#A566FF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/></svg>
+                  h4.slide-subtitle Mark at Elia-50Hz, a german transmission system operator,
+                  h3.slide-title One of the main advantages <br> of the dashboard is that we <br> can save on capital costs
                   .slide-overlay
                   img(src="/enterprise-desktop.jpg" alt="Enterprise")
                 .swiper-slide
-                  h4.slide-subtitle AEMO - Australian Energy Market Operator
-                  h3.slide-title For the Energy Web community of developers, the EDGE marketplace means that there will be
-                  .slide-btn Scroll to see <svg width="9" height="11" viewBox="0 0 9 10" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4.58691 1.21997L4.58691 8.91924" stroke="#A566FF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/><path d="M1.0752 5.76978L4.58693 8.91948L8.09867 5.76978" stroke="#A566FF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/></svg>
+                  h4.slide-subtitle For the Energy Web community of developers
+                  h3.slide-title The E-Mobility Dashboard means that <br> there will be more and more Digital <br> identities created on the EWC 
                   .slide-overlay
                   img(src="/crypto-desktop.jpg" alt="Crypto")
                 .swiper-slide
-                  h4.slide-subtitle AEMO - Australian Energy Market Operator
-                  h3.slide-title For the Energy Web community of developers, the EDGE marketplace means that there will be
-                  .slide-btn Scroll to see <svg width="9" height="11" viewBox="0 0 9 10" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4.58691 1.21997L4.58691 8.91924" stroke="#A566FF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/><path d="M1.0752 5.76978L4.58693 8.91948L8.09867 5.76978" stroke="#A566FF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/></svg>
+                  h4.slide-subtitle For the Energy Web community of developers
+                  h3.slide-title The EV dashboard improves <br> the economics of electric <br> mobility for both
                   .slide-overlay
                   img(src="/world-desktop.jpg" alt="World")
               .swiper-pagination
       section#content
-        .container
+        .container-full
           .content-wrap.content-0
-            .row
-              .col-lg-5
-                h2.content-title When a solar company sold me panels for my house
-                p.content-desc He even chooses to buy the certificates from a power plant in Poland to help increase the demand for clean energy in grey or dark grids, where there aren’t many Renewable Energy facilities yet.
-                p.content-desc unused, collecting dust. <span class="bold">a very expensive paper weight.</span>
-              .col-lg-2.d-none.d-lg-block
-              .col-lg-5.mt-5.mt-lg-0
-                img(src="/solar.png" alt="Solar")
-            .row
-              .col-lg-5.mb-5.mb-lg-0
-                img(src="/edgelive.png" alt="Edge Live")
-              .col-lg-2.d-none.d-lg-block
-              .col-lg-5
-                h3.content-subtitle When EDGE went live..boom! 💥
-                p.content-desc Different <span class="color-primary">utilities in Australia</span> actually <span class="color-primary">started to pay me</span> to use my battery at different times of the day
-                p.content-desc and I'm helping to <span class="color-primary">decarbonize the grid</span> because my battery is being used to balance the grid—not a fossil-fuel powered plant...
+            .row.mb-0
+              .col-lg-6.px-0
+                img(src="/train-ride.jpg" alt="Germany train")
+              .col-lg-6.px-0
+                img(src="/germany-collage.png" alt="Germany")
+            .row.mb-0
+              .col-lg-6
+              .col-lg-6
+                img(src="/germany-village-roof.jpg" alt="Germany village roof")
           .content-wrap.content-1
             .row
               .col-lg-5
