--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -9,6 +9,8 @@
 @import './base/global';
 
 @import './components/allclass';
+@import './components/timeline';
+@import './components/blocks';
 /*! purgecss start ignore */
 @import './components/header';
 @import './pages/home';
