--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -12,8 +12,11 @@ $color-graydark: #222222;
 
 /// Fonts
 // Font family
-$font-family-main: "Bw Gradual", sans-serif;
-$font-family-sequel: "Sequel Sans", sans-serif;
+// $font-family-main: "Bw Gradual", sans-serif;
+// $font-family-sequel: "Sequel Sans", sans-serif;
+
+$font-family-main: "Sequel-Sans-Book", sans-serif;
+$font-family-sequel: "Sequel-Sans-Roman", sans-serif;
 
 $font-size-root: 18px; // (also) font-size-body
 
