--- a/src/views/pages/home.pug
+++ b/src/views/pages/home.pug
@@ -35,88 +35,43 @@ block App
             .swiper.slider
               .swiper-wrapper
                 .swiper-slide
-                  h4.slide-subtitle I’m Robert
-                  h3.slide-title I live in Potsdam, <br> near Berlin.
-                  //- .slide-btn Scroll to see <svg width="9" height="11" viewBox="0 0 9 10" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4.58691 1.21997L4.58691 8.91924" stroke="#A566FF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/><path d="M1.0752 5.76978L4.58693 8.91948L8.09867 5.76978" stroke="#A566FF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/></svg>
+                  h4.slide-subtitle AEMO - Australian Energy Market Operator
+                  h3.slide-title.s-zero I'm helping to decarbonize the grid because my battery is being used to balance the grid-not a fossil-fuel powered plant.
                   .slide-overlay
-                  img(src="/individuals-desktop.jpg" alt="Individuals")
+                  img(src="/aemo-individuals.png" alt="Individuals")
                 .swiper-slide
-                  h4.slide-subtitle Lucas works at SunnyCharge
-                  h3.slide-title Company offering the <br> green charging <br> contract to Robert.
+                  h4.slide-subtitle AEMO - Australian Energy Market Operator
+                  h3.slide-title.s-one Behind the curtain David works for the <u data-bs-toggle="tooltip" data-bs-placement="top" title="Distribution Network System Operator">DNSP</u> and is really happy about Edge
                   .slide-overlay
-                  img(src="/companies-desktop.jpg" alt="Companies")
+                  img(src="/aemo-companies.png" alt="Companies")
                 .swiper-slide
-                  h4.slide-subtitle Mark at Elia-50Hz, a german transmission system operator,
-                  h3.slide-title One of the main advantages <br> of the dashboard is that we <br> can save on capital costs
+                  h4.slide-subtitle AEMO - Australian Energy Market Operator
+                  h3.slide-title.s-two For Mark at <u data-bs-toggle="tooltip" data-bs-placement="top" title="Australian Energy Market Operator">AEMO</u> and any other grid operator, it’s the same thing
                   .slide-overlay
-                  img(src="/enterprise-desktop.jpg" alt="Enterprise")
+                  img(src="/aemo-enterprise.png" alt="Enterprise")
                 .swiper-slide
-                  h4.slide-subtitle For the Energy Web community of developers
-                  h3.slide-title The E-Mobility Dashboard means that <br> there will be more and more Digital <br> identities created on the EWC 
+                  h4.slide-subtitle AEMO - Australian Energy Market Operator
+                  h3.slide-title.s-three For  the Energy Web community of developers, the EDGE marketplace means that there will be
                   .slide-overlay
-                  img(src="/crypto-desktop.jpg" alt="Crypto")
+                  img(src="/aemo-crypto.png" alt="Crypto")
                 .swiper-slide
-                  h4.slide-subtitle For the Energy Web community of developers
-                  h3.slide-title The EV dashboard improves <br> the economics of electric <br> mobility for both
+                  h4.slide-subtitle AEMO - Australian Energy Market Operator
+                  h3.slide-title.s-four For the whole world, thanks to the law of small numbers, all of these batteries
                   .slide-overlay
-                  img(src="/world-desktop.jpg" alt="World")
+                  img(src="/aemo-world.png" alt="World")
               .swiper-pagination
       section#content
-        .container-full
-          .content-wrap.content-0
-            .row.mb-0
-              .col-lg-6.px-0
-                img(src="/train-ride.jpg" alt="Germany train")
-              .col-lg-6.px-0
-                img(src="/germany-collage.png" alt="Germany")
-            .row.mb-0
-              .col-lg-6
-              .col-lg-6
-                img(src="/germany-village-roof.jpg" alt="Germany village roof")
-          .content-wrap.content-1
-            .row
-              .col-lg-5
-                h2.content-title Behind the curtain.. David works for the <strong>DNSP</strong> (Distribution Network System Operator) and is really happy about EDGE:
-                p.content-desc Now that these batteries have <span class="bold">Digital identities</span> anchored on the Energy Web Chain, we know that we have a battery and where, and we can use it to store or discharge energy to the grid as needed
-              .col-lg-2.d-none.d-lg-block
-              .col-lg-5.mt-5.mt-lg-0
-                img(src="/did.png" alt="DID")
-            .row
-              .col-lg-5
-                h3.content-subtitle Before we were blind, and now we see 👁
-                p.content-desc thanks to the traceability and transparency of the Energy Web stack.
-          .content-wrap.content-2
-            .row
-              .col-lg-5
-                h2.content-title For Mark at <strong>AEMO</strong> (Australia’s Energy Market Operator) and any other <strong>grid operator</strong>, it’s the same thing:
-                p.content-desc we have a <strong>“digital twin”</strong> for that battery, implemented with the <strong>EW Stack</strong>, all of us market participants finally have a shared view of the <u>assets</u> like the battery, and what is actually happening in the market.
-              .col-lg-2.d-none.d-lg-block
-              .col-lg-5.mt-5.mt-lg-0
-                img(src="/solar-dots.png" alt="Solar")
-            .row
-              .col-lg-5
-                h3.content-subtitle It simplifies our lives 👁 
-                p.content-desc tracing and accounting, everything is now common and shared knowledge rather than, error prone and disconnected databases
-          .content-wrap.content-3
-            .row
-              .col-lg-5
-                h2.content-title For the Energy Web community of developers, the EDGE marketplace means that there will be
-                h3.content-subtitle Thousands of DIDs created on the EWC.💯
-                p.content-desc After EDGE”s trial period, the architecture has the potential to set a standard for the entire Australian market
-                p.content-desc In this way, every time the market needs to store electricity in the battery or discharge it to the grid, the system will communicate with each of these DIDs via messaging services provided by the utility layer of the Energy Web Stack
-              .col-lg-2.d-none.d-lg-block
-              .col-lg-5.mt-5.mt-lg-0
-                img(src="/create.png" alt="Create")
-          .content-wrap.content-4
-            .row
-              .col-lg-5
-                h2.content-title For the whole world, thanks to the law of small numbers, all these batteries, and other similar <span class="color-primary"><strong>Distributed energy Resources (DER)</strong></span> help to <span class="color-primary"><u>decarbonize</u></span> the grid, 
-                h3.content-subtitle reducing the energy required from centralized power plants, 🏭 
-                p.content-desc that especially in Australia are for the 79% still burning fossil fuels.
-                p.content-desc The EDGE example could be <span class="color-primary">easily deployed across the globe,</span> scaling the <span class="color-primary"><u>positive impact</u></span> on the environment.
-              .col-lg-2.d-none.d-lg-block
-              .col-lg-5.mt-5.mt-lg-0
-                img(src="/world.png" alt="World")
+        .content-wrap.content-0
+          include ../component/zero/block-zero.pug
+        .content-wrap.content-1
+          include ../component/zero/block-one.pug
+        .content-wrap.content-2
+          include ../component/zero/block-two.pug
+        .content-wrap.content-3.overflow-h
+          include ../component/zero/block-three.pug
+        .content-wrap.content-4
+          include ../component/zero/block-four.pug
+        .container
           #nextchapter
             .nextchapter-loading
               p.nextchapter-text Keep scrolling for next chapter
