--- a/src/views/component/zero/block-four.pug
+++ b/src/views/component/zero/block-four.pug
@@ -2,22 +2,26 @@
     .content-wrap.content-4
         .row.mb-0.bg
             .col-lg-6.px-0
-                .text-box
-                    h1.f-large.h-52 To help increase the demand for clean energy in one of the dirtiest grids
-                    article.f-medium.h-48 where there aren’t many Renewable Energy facilities (power plants) yet.
-            .col-lg-6.px-0
-                img(src="/dark-mattery.png" alt="mattery")
+                .text-box(class="decarbonize")
+                    h1.f-medium and other similar Distributed energy <br> Resources (DER)
+                    img(src="/decarbonize.png", alt="decarbonize")
+            .col-lg-6.px-0.img-center-box
+                img(src="/world-dots.png" alt="worlds")
+            .border-liner
         .row.mb-0.bg
-            .centered-items 
-                img(src="/actions-icon.png", alt="actions").icon
-                span Anna’s simple actions
-                h1 Boosted the economics of different Renewable energy Power plants
-                p Making it easier for more to be constructed and more quickly decarbonize the global energy system
+            .col-lg-6.px-0
+                .text-box.world
+                    article.f-large.t-start.h-52 Reducing the energy required from centralized fossil fuel based power plants
+            .col-lg-6.px-0
+                img(src="/electricity-two.png" alt="electricity-two")
 .world-footer
-    img(src="/world-foo.png", alt="world-footer")
-    .container
-        .footer-text
-            p.f-medium.t-start Digitizing renewables, makes them easier and faster to buy, which as a consequence increases the demand and ultimately drives
-            h1.f-larger.t-start.h-60 More investments in zero-carbon resources
+    img(src="/world-footer-aemo.png", alt="world-footer")
+    .footer-text
+        h1.f-larger.t-center Are you a Grid Operator?
+        h2.f-small.t-center.h-26 Do you need a way to coordinate distributed energy resource behavior across the transmission / distribution interface?  
+        h3.f-medium.t-center.h-42 Learn how you can BUILD a similar solution with the EW Stack.
+        button
+            span Build with us
+            img(src="/arrow-right.svg", alt="svg")
 
 
