--- a/src/views/component/zero/block-three.pug
+++ b/src/views/component/zero/block-three.pug
@@ -1,40 +1,22 @@
 .container
-    .content-wrap.content-3.splitter-container
-        img(src="/cr-w.png", alt="world-dots-small").cr-header-img
-        .row.mg-0
-            include ../timeline.pug
+    .content-wrap.content-3
         .row.mb-0.bg
             .col-lg-6.px-0
+                img(src="/coin-hand.png" alt="aeomo-gradient")
+            .col-lg-6.px-0
                 .text-box
-                    article.f-small.t-start.cr-small-text Digitizing “Green Energy” by tokenizing it on a blockchain is  
-                    h1.f-larger.t-start A revolution for the <br> energy industry
-                    article.f-small.t-start.cr-medium-text as it unlocks new permissionless and green business models, and powers the upcoming age of
+                    h1.f-larger Thousands of DIDs created on the EWC.
+                    article.f-medium Thousands of DIDs created on the EWC.
+        .row.mb-0.bg.gray
             .col-lg-6.px-0
+                .text-box.flex-no-gaps
+                    article.f-large.t-end This way
+                    article.f-medium.t-end every time the market needs to store electricity in the battery or discharge it to the grid
+            .col-lg-6.px-0
+                img(src="/hexagon-two.png" alt="hexagon-two").sized-image
         .row.mb-0.bg.gray
             .col-lg-6.px-0
             .col-lg-6.px-0
-                .text-box.flex-no-gaps.crypto
-                    img(src="/file-icon.png", alt="icon").size-icon
-                    article.f-medium.t-start Obviously the Crypto world has been the first to understand this potential, as has been shown by the pioneers at Protocol Labs that partnered with us to help them decarbonize the Filecoin network, helping their miners, known as “Storage Providers”, buy Renewable Energy Certificates, in different regions across the globe
-        .row.mb-0.bg.gray
-            .col-lg-6.px-0
-                .text-box.crypto
-                    img(src="/cryptos.png", alt="icon").size-small
-                    h1.f-larger Decarbonizing the Filecoin blockchain
-                    article.f-medium.h-42 In support of the Crypto Climate Accord (CCA), Protocol Labs and Energy Web showcase an open-source solution for decentralized renewable energy purchasing by crypto miners. 
-                    article.f-medium.h-42 Filecoin storage providers purchased verified renewable energy using Energy Web Zero, a public renewable energy search engine
-                    img(src="/crypto-social.png", alt="icon").size-wide
-            .col-lg-6.px-0
-                img(src="/servers.png", alt="icon")
-                img(src="/crypto-s-two.png", alt="icon")
-        .row.mb-0.bg.gray
-            .col-lg-6.px-0
-            .col-lg-6.px-0
-    .border-liner
-.world-footer.crypto-f
-    img(src="/block-three-footer.png", alt="world-footer")
-    .container.main-box
-        .f-text-crypto
-                .text-box
-                    article.f-small.t-start “We are excited to join the Crypto Climate Accord (cryptoclimate.org) and contribute open-source solutions to the crypto sector. We see various opportunities to enable and incentivize Filecoin storage providers to source their electricity from renewables in a verifiable way”
-                img(src="crypto-f-gradient.png", alt="footer-img").f-image
+                .text-box.to-right
+                    article.f-medium.t-start the system will communicate with each of these DIDs via messaging services provided by the 
+                    article.f-large.t-start Utility Layer of the Energy Web Stack
