--- a/src/views/component/zero/block-four.pug
+++ b/src/views/component/zero/block-four.pug
@@ -1,27 +1,25 @@
 .container
     .content-wrap.content-4
         .row.mb-0.bg
-            .col-lg-6.px-0
-                .text-box(class="decarbonize")
-                    h1.f-medium and other similar Distributed energy <br> Resources (DER)
-                    img(src="/decarbonize.png", alt="decarbonize")
+            .col-lg-6.px-0.aemo-4-0
+                img(src="/decarbonize.png", alt="decarbonize").blocked-center
             .col-lg-6.px-0.img-center-box
                 img(src="/world-dots.png" alt="worlds")
             .border-liner
         .row.mb-0.bg
             .col-lg-6.px-0
                 .text-box.world
-                    article.f-large.t-start.h-52 Reducing the energy required from centralized fossil fuel based power plants
+                    article.f-large.t-start.h-52 Reducing the energy required from centralized fossil-fuel based power plants
             .col-lg-6.px-0
                 img(src="/electricity-two.png" alt="electricity-two")
 .world-footer
-    img(src="/world-footer-aemo.png", alt="world-footer")
+    img(src="/world-footer-aemo.png", alt="world-footer").footer-image
     .footer-text
         h1.f-larger.t-center Are you a Grid Operator?
         h2.f-small.t-center.h-26 Do you need a way to coordinate distributed energy resource behavior across the transmission / distribution interface?  
         h3.f-medium.t-center.h-42 Learn how you can BUILD a similar solution with the EW Stack.
         button
             span Build with us
-            img(src="/arrow-right.svg", alt="svg")
+            img(src="/arrow-right.svg", alt="svg").icon
 
 
