--- a/src/views/component/zero/block-one.pug
+++ b/src/views/component/zero/block-one.pug
@@ -1,20 +1,27 @@
+.container-full 
+    .aemo-box 
+        .container 
+            .content-wrap.content-1
+                .row.mb-0.bg
+                    .col-lg-6.px-0
+                        .text-box.a-center
+                            article.f-large.h-48.block-one-t-one To see and interact with assets that she was previously blind to:
+                    .col-lg-6.px-0
+                        .text-box.a-center 
+                            article.f-medium.h-48.block-one-t-two solar systems, batteries, and other sources of flexible load owned by end customers and operated by aggregators.
+
 .container
     .content-wrap.content-1
-        .row.mb-0.bg
-            .col-lg-6.px-0
-                .text-box.a-center
-                    article.f-large.h-48.block-one-t-one EDGE is giving him the ability to see and interact with assets that she was previously blind to:
-            .col-lg-6.px-0
-                .text-box.a-center 
-                    article.f-medium.h-48.block-one-t-two solar systems, batteries, and other sources of flexible load owned by end customers
-        .row.mb-0.gray
+        .row.mb-0.g-0
             .col-lg-6.px-0
                 img(src="/scooter.png" alt="scooter").block-one-img
             .col-lg-6.px-0
-                .text-box.to-right.flex-no-gaps
-                    img(src="/block-two-g-1.png", alt="block-gradient").g-sized
+                .text-box.to-right.aemo-text-1-1
+                    //- img(src="/block-two-g-1.png", alt="block-gradient").g-sized
+                    h1.f-larger.h-84 Now that these assets and the companies around them have 
+                        span.gradient Digital identities 
                     article.f-large Anchored on the<br> <u>Energy Web Chain</u>
-                    article.f-medium.mt-5 We know that we have a battery and where, and we can use it to store or discharge energy to the grid as needed
+                    article.f-medium.mt-5 we know where they are, we can communicate with them, and we can rely on them to store or discharge energy to the grid as needed.
         .row.mb-0.bg
             .col-lg-6.px-0
                 .text-box
