--- a/src/views/component/zero/block-two.pug
+++ b/src/views/component/zero/block-two.pug
@@ -2,25 +2,25 @@
     .content-wrap.content-2.splitter-container
         .row.mb-0.bg
             .col-lg-6.px-0
-                .text-box.enterprise
+                .text-box.enterprise.aemo-text-2-2
                     article.f-larger
                         span Now we have a 
                         span.gradient.underline Digital relationship
                         span with that battery, implemented with the EW Stack
-            .col-lg-6.px-0
+            .col-lg-6.px-0.aemo-0-2
                 img(src="/sun-battary.png" alt="Battary")(class="large-sc")
         .row.mb-0.bg
             .col-lg-6.px-0
                 img(src="/battary-illustration.png" alt="house")
             .col-lg-6.px-0
-                .text-box.to-right
-                    h1.f-medium.h-48 where all market players have  a shared view of the same underlying assets, like the battery, and insight into how and when it can help with
-                    h1.f-large.t-start Grid flexibility
+                .text-box.aemo-text-2-1
+                    h1.f-medium.h-48 permissioned market participants have a shared view of the same underlying assets
+                    h1.f-large.t-start Like smart inverters and batteries
+                    h1.f-medium.h-48 and insight into how and when they can help make the grid more flexible from the bottom up
         .row.mb-0.bg.col-reversed
             .col-lg-6.px-0
-                .text-box.flex-no-gaps
-                    article.f-large.t-start This simplifies our lives !
-                    h1.f-medium.t-start.h-48 This is possible because we and the distribution utilities use a  common, shared, open source infrastructure rather than each organization using their own disconnected databases
-            .col-lg-6.px-0
-                img(src="/electricity.png" alt="house")
-    .border-liner
+                .text-box.flex-no-gaps.aemo-text-2-2
+                    h1.f-medium.t-start.h-48 This is possible because we and the distribution utilities use common, shared, open source infrastructure rather than each organization using their own siloed systems
+            .col-lg-6.px-0.aemo-0-2
+                img(src="/electricity.png" alt="house").stick-line
+        .border-liner
