--- a/src/views/component/zero/block-zero.pug
+++ b/src/views/component/zero/block-zero.pug
@@ -2,24 +2,28 @@
     .content-wrap.content-0
         .row.mb-0.bg
             .col-lg-6.px-0
-                .text-box 
-                    article.f-medium.h-42 When a Solar company sold me panels for my house
-                    article.f-medium.h-42 They also sold me a battery. It’s been sitting in my basement for two years not doing a whole lot.
-                    img(src="/aemo-gradient-indis.png" alt="aeomo-gradient")
+                .text-box.aemo-text-0-1 
+                    article.f-medium.h-42 When a solar company sold me panels for my house, they also sold me a battery. It’s been sitting in my basement for two years not doing a whole lot.
+                    h1.f-medium.h-42 
+                        span When EDGE
+                        span went live... 
+                        span.gradient.w-height.last Boom! 💥
+                    //- img(src="/aemo-gradient-indis.png" alt="aeomo-gradient")
             .col-lg-6.px-0
                 img(src="/battaries.png" alt="Battaries")
         .row.mb-0.bg.gray
             .col-lg-6.px-0
-                .text-box
-                    h1.f-medium Different utilities in Australia actually
-                    article.f-larger started to pay me to use my battery at different times of the day
+                .text-box.aemo-text-0-2
+                    h1.f-medium Now with Project EDGE, My solar system and battery are being used by different utilities to help balance the grid 
+                    article.f-larger And they’re 
+                        span <u>Paying me</u>  to do it!
             .col-lg-6.px-0
                 img(src="/block-one-house.png" alt="house")
-        .row.mb-0.bg.col-reversed
-            .col-lg-6.px-0
-                img(src="/hexagon.png" alt="house").block-zero-img
-            .col-lg-6.px-0
-                .text-box.to-right.s-t-center
-                    h1.f-medium and I'm helping to
-                    h1.f-large <u>Decarbonize the grid</u>
-                    article.f-medium.h-42 because my battery is being used to balance the grid—not a fossil-fuel powered plant...
+        //- .row.mb-0.bg.col-reversed
+        //-     .col-lg-6.px-0
+        //-         img(src="/hexagon.png" alt="house").block-zero-img
+        //-     .col-lg-6.px-0
+        //-         .text-box.to-right.s-t-center
+        //-             h1.f-medium and I'm helping to
+        //-             h1.f-large <u>Decarbonize the grid</u>
+        //-             article.f-medium.h-42 because my battery is being used to balance the grid—not a fossil-fuel powered plant...
