--- a/src/views/pages/home.pug
+++ b/src/views/pages/home.pug
@@ -36,14 +36,14 @@ block App
               .swiper-wrapper
                 .swiper-slide
                   h4.slide-subtitle AEMO - Australian Energy Market Operator
-                  h3.slide-title.s-zero I'm helping to decarbonize the grid because my battery is being used to balance the grid-not a fossil-fuel powered plant.
+                  h3.slide-title.s-zero My batteries and solar system are helping to balance the grid instead of a fossil-fuel powered plant
                   .slide-overlay
-                  img(src="/aemo-individuals.png" alt="Individuals")
+                  img(src="/aemo-companies.png" alt="Individuals")
                 .swiper-slide
                   h4.slide-subtitle AEMO - Australian Energy Market Operator
-                  h3.slide-title.s-one Behind the curtain David works for the <u data-bs-toggle="tooltip" data-bs-placement="top" title="Distribution Network System Operator">DNSP</u> and is really happy about Edge
+                  h3.slide-title.s-one Dana works for the <u data-bs-toggle="tooltip" data-bs-placement="top" title="Distribution Network System Operator"> DNSP</u>  and EDGE is giving her the ability
                   .slide-overlay
-                  img(src="/aemo-companies.png" alt="Companies")
+                  img(src="/aemo-individuals.png" alt="Companies")
                 .swiper-slide
                   h4.slide-subtitle AEMO - Australian Energy Market Operator
                   h3.slide-title.s-two For Mark at <u data-bs-toggle="tooltip" data-bs-placement="top" title="Australian Energy Market Operator">AEMO</u> and any other grid operator, it’s the same thing
