--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -162,7 +162,7 @@
 
         @include media('<=phone') {
           top: 48%;
-          @include font-subheading2($size: 0.5rem);
+          @include font-subheading2($size: 1rem);
         }
       }
 
@@ -411,11 +411,26 @@
   line-height: 48px;
 }
 
+.h-84 {
+  line-height: 84px;
+}
+
 .gradient {
   border-radius: 10px;
-  padding: 5px 20px;
+  width: fit-content;
+  padding: 0 5px;
   background: rgb(235,185,242);
   background: linear-gradient(90deg, rgba(235,185,242,1) 0%, rgba(246,170,170,1) 50%, rgba(165,102,255,1) 100%);
+}
+
+.w-height {
+  height: 85px;
+  padding: 20px 12px;
+}
+
+.blocked-center {
+  display: block;
+  margin: 0 auto;
 }
 
 .underline {
