--- a/src/views/component/zero/block-three.pug
+++ b/src/views/component/zero/block-three.pug
@@ -4,19 +4,19 @@
             .col-lg-6.px-0
                 img(src="/coin-hand.png" alt="aeomo-gradient")
             .col-lg-6.px-0
-                .text-box
-                    h1.f-larger Thousands of DIDs created on the EWC.
-                    article.f-medium Thousands of DIDs created on the EWC.
+                .text-box.aemo-3-1
+                    img(src="/gradient-one-aemo.png" alt="gradient-one").sized-image
+                    article.f-medium Capable of generating and ingesting both data and Energy Web utility layer services.
         .row.mb-0.bg.gray
             .col-lg-6.px-0
                 .text-box.flex-no-gaps
-                    article.f-large.t-end This way
-                    article.f-medium.t-end every time the market needs to store electricity in the battery or discharge it to the grid
+                    article.f-large.t-end After EDGE”s trial period
+                    article.f-medium.t-end the architecture has the potential to set a standard for the entire Australian market and the world.
             .col-lg-6.px-0
-                img(src="/hexagon-two.png" alt="hexagon-two").sized-image
-        .row.mb-0.bg.gray
-            .col-lg-6.px-0
-            .col-lg-6.px-0
-                .text-box.to-right
-                    article.f-medium.t-start the system will communicate with each of these DIDs via messaging services provided by the 
-                    article.f-large.t-start Utility Layer of the Energy Web Stack
+                img(src="/hexagon-two.png" alt="hexagon-two").sized-image.blocked-center
+        //- .row.mb-0.bg.gray
+        //-     .col-lg-6.px-0
+        //-     .col-lg-6.px-0
+                //- .text-box.to-right
+                //-     article.f-medium.t-start the system will communicate with each of these DIDs via messaging services provided by the 
+                //-     article.f-large.t-start Utility Layer of the Energy Web Stack
