--- a/src/views/component/zero/block-four.pug
+++ b/src/views/component/zero/block-four.pug
@@ -20,5 +20,27 @@
         .footer-text
             p.f-medium.t-start.smaller-p Digitizing renewables, makes them easier and faster to buy, which as a consequence increases the demand and ultimately drives
             p.f-larger.t-start.h-60 More investments in zero-carbon resources
-.world-footer.smaller-footer
-    img(src="/zero-one-footer-image.png", alt="")
+.container
+    .content-wrap.content-4
+        .row.mb-0.bg
+            .zero-sec-zero.world-timeline
+                .z-timeline
+                    .z-left 
+                        h1 Use Zero today to 
+                    .z-right 
+                        .item
+                            .icon 
+                                img(src="world-footer-arrow.png", alt="arrow")
+                            .text 
+                                span Tokenize and sell renewable energy supply
+                        .item
+                            .icon 
+                                img(src="world-footer-arrow.png", alt="arrow")
+                            .text Decarbonize your business or home
+                        .item
+                            .icon 
+                                img(src="world-footer-arrow.png", alt="arrow")
+                            .text.last-child Build a new business model with the help of the Energy Web stack
+                        .item 
+                            button Build with us
+                .z-liner
