--- a/src/views/component/zero/block-one.pug
+++ b/src/views/component/zero/block-one.pug
@@ -2,10 +2,11 @@
     .content-wrap.content-1.splitter-container
         .row.mb-0.bg
             .col-lg-6.px-0.zero-sec-one
-                img(src="/enter-image-one.png", alt="enter-iamge-one")
+                img(src="/enter-image-one.png", alt="enter-iamge-one").large-sc
+                img(src="/mobile-sec-image.png", alt="enter-iamge-one").mobile-image.small-sc
             .col-lg-6.px-0
                 .text-box.flex-no-gaps.zero-sec-two
-                    img(src="/enter-iamge-two.png", alt="enter-image-two").section-zero-image
+                    img(src="/enter-iamge-two.png", alt="enter-image-two").section-zero-image.large-sc
                     .desc-text 
                         h1 Making it 
                         article 
