--- a/src/views/component/zero/block-zero.pug
+++ b/src/views/component/zero/block-zero.pug
@@ -1,5 +1,4 @@
 .wide-image 
-    img(src="/zero-line-strokes.png", alt="strokes").back-img
 .container
     .content-wrap.content-0
         .row.mb-0.bg.relative-header
@@ -10,12 +9,30 @@
                 .zero-box
                     img(src="/zero.png", alt="zero").zero
                     .article Luckily she can use Zero, the EWF <span> Global Renewable Search Engine</span> that is as easy to use as a flight search aggregator. 
-        .row.mb-0.bg.sticked
-            //- .backimage
-            //-     img(src="/zero-b-one-back.png", alt="zero-b")
-                //- include ../smaller.pug
-            .section-image.mg-top-overlay
-                img(src="/section-two-zero.png", alt="zero")
+        .row.mb-0.bg
+            img.z-image-header(src="/zero-header.png", alt="zero-b")
+            .zero-sec-zero
+                .z-timeline
+                    .z-left 
+                        .item 
+                            .text 
+                                span Tokenizing their 
+                                span production
+                            .icon 
+                                img(src="timeline-arrow-left.png", alt="arrow")
+                    .z-right.rotated
+                        .item
+                            .icon 
+                                img(src="timeline-arrow-left.png", alt="arrow")
+                            .text 
+                                span By digitizing RE facilities
+                        .item
+                            .icon 
+                                img(src="timeline-arrow-left.png", alt="arrow")
+                            .text.last-child
+                                span And certifying each unit 
+                                span (MWh) of clean electricity
+                .z-liner
         .row.mb-0.bg.col-reversed
             .col-lg-5.px-0
                 .text-box.flex-no-gaps
