--- a/src/styles/components/_blocks.scss
+++ b/src/styles/components/_blocks.scss
@@ -69,7 +69,6 @@
         display: block;
     }
     .b-zero {
-        margin: 15px;
         font-size: 60px;
         line-height: 84px;
         color: #452E66;
@@ -82,6 +81,162 @@
             display: inline;
         }
     }
+}
+
+.zero-sec-zero {
+    background-image: url("/public/zero-one-image.png");
+    height: 902px;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    width: 100%;
+    .z-timeline {
+        display: flex;
+        height: 100%;
+        align-items: center;
+        .z-left {
+            width: 50%;
+            height: 100%;
+            .item {
+                height: 100%;
+                height: 100%;
+                display: flex;
+                gap: 20px;
+                justify-content: flex-end;
+                align-items: center;
+                .text {
+                    text-align: right;
+                    color: #fff;
+                }
+            }
+        }
+        .z-right {
+            width: 50%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            .item {
+                height: 100%;
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+                gap: 20px;
+                .icon.rotated {
+                    transform: rotate(180deg);
+                }
+                .text {
+                    text-align: left;
+                    color: #fff;
+                }
+            }
+        }
+    }
+    span {
+        display: block;
+        font-size: 34px;
+        line-height: 47px;
+    }
+    .z-liner {
+        width: 0;
+        border-left: 1px solid #ffffff20;
+        height: 100%;
+        position: absolute;
+        left: 50%;
+        transform: translateX(50%);
+        top: 0;
+    }
+}
+
+.world-timeline {
+    max-width: 1400px;
+    width: 100%;
+    max-height: 517px;
+    background-image: url("/public/world-footer.png");
+    .z-timeline {
+        display: flex;
+        height: 100%;
+        align-items: center;
+        .z-left {
+            width: 50%;
+            height: 100%;
+            h1 {
+                font-size: 60px;
+                max-width: 461px;
+            }
+            .item {
+                height: 100%;
+                height: 100%;
+                display: flex;
+                gap: 20px;
+                justify-content: flex-end;
+                align-items: center;
+                .text {
+                    text-align: right;
+                    color: #452E66;
+                }
+            }
+        }
+        .z-right {
+            width: 50%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            .item {
+                height: 100%;
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+                gap: 20px;
+                .icon {
+                    transform: rotate(0);
+                    width: 81px;
+                    height: 43px;
+                }
+                .text {
+                    text-align: left;
+                    color: #452E66;
+                    max-width: 366px;
+                }
+                button {
+                    width: 150px;
+                    height: 39px;
+                    background-color: #A566FF;
+                    border-radius: 20px;
+                    padding: 8px 16px;
+                    font-size: 12px;
+                    cursor: pointer;
+                    color: #fff;
+                    margin-left: 38px;
+                }
+            }
+        }
+    }
+    span {
+        display: block;
+        font-size: 20px;
+        line-height: 28px;
+    }
+    .z-liner {
+        width: 0;
+        border-left: 1px solid #00000020;
+        height: 100%;
+        position: absolute;
+        left: 50%;
+        transform: translateX(50%);
+        top: 0;
+    }
+}
+
+.z-image-header {
+    max-width: 753px;
+    max-height: 269px;
+    width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+    position: relative;
+    top: 130px;
+    z-index: 999;
 }
 
 .zero-sec-two {
@@ -129,6 +284,12 @@
     img {
         margin-left: -70px;
     }
+    .mobile-image {
+        display: block;
+        margin: 0 auto;
+        max-width: 278px;
+        max-height: 168px;
+    }
 }
 
 .zero-sec-two {
@@ -149,11 +310,11 @@
             margin: 0 auto;
         }
         .one {
-            min-width: 1053px;
+            max-width: 1053px;
         }
         .two {
-            min-width: 1100px;
-            min-height: 805px;
+            max-width: 1100px;
+            max-height: 805px;
         }
     }
     article {
@@ -375,10 +536,10 @@
 }
 
 .small-sc {
-    display: none;
+    display: none !important;
 }
 .large-sc {
-    display: block;
+    display: block !important;
 }
 
 .b-one-zero {
@@ -456,24 +617,31 @@
 }
 
 .wide-image {
-    height: 894px;
+    height: 694px;
     position: absolute;
     width: 100%;
     display: flex;
+    top: 380px;
     justify-content: center;
     align-items: center;
-    img {
-        max-width: 1400px;
-        max-height: 894px;
-        height: 100%;
-        position: absolute;
-        top: 95px;
-        left: 50%;
-        transform: translateX(-50%);
-    }
+    background-image: url("/public/zero-line-strokes.png");
+    background-size: cover;
+    background-position: center;
+    // img {
+    //     max-width: 1400px;
+    //     max-height: 894px;
+    //     height: 100%;
+    //     position: absolute;
+    //     top: 95px;
+    //     left: 50%;
+    //     transform: translateX(-50%);
+    // }
 }
 
 @media only screen and (max-width: 950px) {
+    .zero-sec-two .desc-text {
+        margin-left: 0;
+    }
     .world-footer {
         min-height: 700px;
         .footer-text {
@@ -558,10 +726,10 @@
         text-align: center;
     }
     .small-sc {
-        display: block;
+        display: block !important;
     }
     .large-sc {
-        display: none;
+        display: none !important;
     }
     img {
         display: block;
@@ -582,6 +750,111 @@
             display: block;
             margin: 0 auto;
             text-align: center;
+        }
+    }
+    .zero-box {
+        padding-left: 17px;
+        padding-right: auto;
+    }
+
+    .z-image-header {
+        max-width: 80%;
+        display: block;
+        margin: 0 auto;
+        top: 210px;
+    }
+
+    .zero-sec-zero {
+        background-image: none;
+        background-color: #452E66;
+        .z-timeline {
+            flex-direction: column;
+            font-size: 30px;
+            .z-left {
+                flex: 1.2;
+                .item {
+                    align-items: flex-end;
+                    margin-bottom: 40px;
+                }
+            }
+            .z-right {
+                flex: 2;
+            }
+            & > div {
+                flex: 1;
+                .item {
+                    height: auto;
+                    .text {
+                        background-color: #452E66;
+                        width: 100%;
+                        z-index: 99;
+                        text-align: center !important;
+                        padding-top: 40px;
+                        padding-bottom: 20px;
+                        span {
+                            display: inline;
+                        }
+                    }
+                    .last-child {
+                        padding-bottom: 88px;
+                    }
+                }
+            }
+            .icon {
+                display: none;
+            }
+        }
+    }
+    .world-timeline {
+        background-image: none;
+        background-color: #ffffff20;
+        min-height: 517px;
+        max-height: 850px !important;
+        .z-timeline {
+            flex-direction: column;
+            font-size: 30px;
+            .z-left {
+                flex: 1.2;
+                margin-top: 40px;
+                width: 100%;
+                .item {
+                    align-items: flex-end;
+                    margin-bottom: 40px;
+                }
+                h1 {
+                    max-width: 100%;
+                    text-align: center;
+                }
+            }
+            .z-right {
+                flex: 2;
+            }
+            & > div {
+                flex: 1;
+                .item {
+                    height: auto;
+                    .text {
+                        background-color: #ffffff20;
+                        width: 100%;
+                        z-index: 99;
+                        text-align: center !important;
+                        padding-top: 40px;
+                        padding-bottom: 20px;
+                        span {
+                            display: inline;
+                        }
+                    }
+                    .last-child {
+                        padding-bottom: 88px;
+                    }
+                }
+            }
+            .icon {
+                display: none;
+            }
+        }
+        .z-liner {
+            display: none;
         }
     }
   }
